--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "0",
+  "homepage": ".",
   "name": "tokemon",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "erc721a": "^4.2.3",
     "ethers": "^5.7.1",
     "hardhat": "^2.11.2",
     "react": "^18.2.0",
