--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ typechain-types
 
 #Hardhat files
 cache
-#artifacts
+artifacts
 
 
 node_modules
@@ -43,5 +43,5 @@ typechain-types
 
 #Hardhat files
 cache
-#artifacts
+artifacts
 hardhat.config.js
